force-app/main/default/objects/Duplicate_Record__c/Duplicate_Record__c.object-meta.xml
<CustomObject>
    <label>Duplicate Record</label>
    <nameField>
        <label>Duplicate Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duplicate Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>