force-app/main/default/objects/Duplicate_Record__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Duplicate Records</relationshipLabel>
    <relationshipName>Duplicate_Records</relationshipName>
    <type>Lookup</type>
</CustomField>