force-app/main/default/objects/Duplicate_Record__c/fields/New_Lead__c.field-meta.xml
<CustomField>
    <fullName>New_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Duplicate Records</relationshipLabel>
    <relationshipName>Duplicate_Records</relationshipName>
    <type>Lookup</type>
</CustomField>