force-app/main/default/objects/Duplicate_Record__c/fields/Old_Lead__c.field-meta.xml
<CustomField>
    <fullName>Old_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Duplicate Records (Old Lead)</relationshipLabel>
    <relationshipName>Duplicate_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>